--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <body>
     <div id="root"></div>
     <!-- Messenger Plugin chat Code -->
+    <div id="fb-root"></div>
+
+    <div id="fb-customer-chat" className="fb-customerchat"></div>
+
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "113225108463727");
