--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- Messenger Plugin chat Code -->
     <div id="fb-root"></div>
 
-    <div id="fb-customer-chat" className="fb-customerchat"></div>
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
